--- a/Junior/Junior.Web/Views/Compound/Edit.cshtml
+++ b/Junior/Junior.Web/Views/Compound/Edit.cshtml
@@ -11,51 +11,51 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Compound</h4>
-    <hr />
+    <div class="form-horizontal">
+        <h4>Compound</h4>
+        <hr />
 
-    @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.CompoundId)
 
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.TypeId, "Type", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TypeId, new SelectList(ViewBag.Types, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
-        </div>
-    </div>
-
-    @for (int i = 0; i < Model.Elements.Count; i++)
-    {
-        @Html.HiddenFor(model => model.Elements[i].Id)
-
-        <div class="form-group chemical-element">
-            @Html.LabelFor(model => model.Elements[i].ElementQuantity, "Element quantity", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-1">
-                @Html.TextBoxFor(model => model.Elements[i].ElementQuantity, htmlAttributes: new { @type = "number", @min = "1", @class = "form-control", style = "width:5em" })
-            </div>
-            <div class="col-md-2">
-                @Html.DropDownListFor(model => model.Elements[i].ElementId, new SelectList(ViewBag.ElementNames, "Id", "Name", Model.Elements[i].ElementId), htmlAttributes: new { @class = "form-control" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
-    }
+        <div class="form-group">
+            @Html.LabelFor(model => model.TypeId, "Type", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.TypeId, new SelectList(ViewBag.Types, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
+            </div>
+        </div>
 
-    <br />
-    <br />
+        @for (int i = 0; i < Model.Elements.Count; i++)
+        {
+            @Html.HiddenFor(model => model.Elements[i].CompoundElementId)
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group chemical-element">
+                @Html.LabelFor(model => model.Elements[i].Quantity, "Element quantity", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-1">
+                    @Html.TextBoxFor(model => model.Elements[i].Quantity, htmlAttributes: new { @type = "number", @min = "1", @class = "form-control", style = "width:5em" })
+                </div>
+                <div class="col-md-2">
+                    @Html.DropDownListFor(model => model.Elements[i].Id, new SelectList(ViewBag.ElementNames, "Id", "Name", Model.Elements[i].Id), htmlAttributes: new { @class = "form-control" })
+                </div>
+            </div>
+        }
+
+        <br />
+        <br />
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
         </div>
     </div>
-</div>
 }
 
 <div>
