Implemented boiling point feature for compounds and elements

--- a/Junior/Junior.Web/Views/Compound/Create.cshtml
+++ b/Junior/Junior.Web/Views/Compound/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Junior.SharedModels.DtoModels.CompoundElementDto
+﻿@model Junior.SharedModels.DtoModels.CompoundElementPartialDto
 
 @{
     ViewBag.Title = "Create compound";
