--- a/Junior/Junior.Web/Views/Shared/_Layout.cshtml
+++ b/Junior/Junior.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Show list", "Index", "Compound")</li>
+                    <li>@Html.ActionLink("Compound list", "Index", "Compound")</li>
+                    <li>@Html.ActionLink("Element list", "Index", "Element")</li>
                     <li>@Html.ActionLink("Create a compound", "Create", "Compound")</li>
                 </ul>
             </div>
