--- a/Junior/Junior.Web/Views/Compound/Edit.cshtml
+++ b/Junior/Junior.Web/Views/Compound/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model Junior.SharedModels.DtoModels.CompoundElementDto
+﻿@model Junior.SharedModels.DtoModels.CompoundElementPartialDto
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit compound";
 }
 
 <h2>Edit</h2>
@@ -47,6 +47,16 @@
             </div>
         }
 
+        <div class="form-group">
+            <label class="control-label col-md-2">Boiling temperature</label>
+            <div class="col-md-2">
+                <input id="boilingTemperature" class="form-control" disabled>
+            </div>
+            <div class="col-md-1">
+                @Html.DropDownList("TemperatureType", new SelectList(ViewBag.TemperatureTypes, "Value", "Text", 1), htmlAttributes: new { @onchange = "getBoilingPoint(event.target.value)", @class = "form-control" })
+            </div>
+        </div>
+
         <br />
         <br />
 
@@ -65,3 +75,19 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script>
+    $(document).ready(function () {
+        getBoilingPoint(TemperatureType.value);
+    });
+
+    var getBoilingPoint = function (temperatureTypeId) {
+        $.get("/Compound/GetBoilingTemperature?compoundId=" + CompoundId.value + "&type=" + temperatureTypeId)
+            .done(function (data) {
+                boilingTemperature.value = data;
+            })
+            .fail(function () {
+                alert("Error occured while fetching data.");
+            })
+    }
+</script>
